--- a/GUI/AboutDiag.ui
+++ b/GUI/AboutDiag.ui
@@ -23,7 +23,7 @@
    <cursorShape>WhatsThisCursor</cursorShape>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>About</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../video4fuze.qrc">
@@ -109,8 +109,8 @@
   <widget class="QLabel" name="logo">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>0</y>
+     <x>290</x>
+     <y>10</y>
      <width>61</width>
      <height>61</height>
     </rect>
@@ -143,10 +143,10 @@
   <widget class="QLabel" name="Appinfo">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>30</x>
      <y>10</y>
      <width>221</width>
-     <height>51</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="cursor">
