--- a/GUI/Preferences.ui
+++ b/GUI/Preferences.ui
@@ -88,7 +88,7 @@
         <string>Two passes</string>
        </property>
        <property name="checked">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
       </widget>
      </item>
