--- a/GUI/MainWindow.ui
+++ b/GUI/MainWindow.ui
@@ -233,6 +233,16 @@
              </layout>
             </item>
             <item>
+             <widget class="QCheckBox" name="recursiveCheck">
+              <property name="toolTip">
+               <string>Convert files in all directories and subdirectories</string>
+              </property>
+              <property name="text">
+               <string>Recursive</string>
+              </property>
+             </widget>
+            </item>
+            <item>
              <layout class="QHBoxLayout" name="horizontalLayout">
               <item>
                <spacer name="horizontalSpacer_3">
@@ -244,8 +254,8 @@
                 </property>
                 <property name="sizeHint" stdset="0">
                  <size>
-                  <width>0</width>
-                  <height>0</height>
+                  <width>13</width>
+                  <height>13</height>
                  </size>
                 </property>
                </spacer>
@@ -273,8 +283,8 @@
                 </property>
                 <property name="sizeHint" stdset="0">
                  <size>
-                  <width>0</width>
-                  <height>0</height>
+                  <width>13</width>
+                  <height>13</height>
                  </size>
                 </property>
                </spacer>
@@ -309,9 +319,6 @@
             <property name="showGrid">
              <bool>false</bool>
             </property>
-            <attribute name="horizontalHeaderStretchLastSection">
-             <bool>true</bool>
-            </attribute>
             <attribute name="horizontalHeaderStretchLastSection">
              <bool>true</bool>
             </attribute>
@@ -631,9 +638,6 @@
             <property name="showGrid">
              <bool>false</bool>
             </property>
-            <attribute name="horizontalHeaderStretchLastSection">
-             <bool>true</bool>
-            </attribute>
             <attribute name="horizontalHeaderStretchLastSection">
              <bool>true</bool>
             </attribute>
@@ -1030,7 +1034,7 @@
      <x>0</x>
      <y>0</y>
      <width>814</width>
-     <height>21</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp">
