Added DVD/Blueray and directory selection support to the GUI
git-svn-id: http://video4fuze.googlecode.com/svn/trunk@78 8f0b585c-89e2-11de-a519-b78fc8232508

--- a/GUI/MainWindow.ui
+++ b/GUI/MainWindow.ui
@@ -117,7 +117,7 @@
                 </property>
                </widget>
               </item>
-              <item row="1" column="1">
+              <item row="2" column="1">
                <widget class="QPushButton" name="SelectOutputButton">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
@@ -130,7 +130,7 @@
                 </property>
                </widget>
               </item>
-              <item row="2" column="1">
+              <item row="3" column="1">
                <widget class="QPushButton" name="RemoveButton">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
@@ -159,7 +159,7 @@
                 </property>
                </spacer>
               </item>
-              <item row="1" column="2">
+              <item row="2" column="2">
                <spacer name="horizontalSpacer_2">
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
@@ -174,6 +174,13 @@
                  </size>
                 </property>
                </spacer>
+              </item>
+              <item row="1" column="1">
+               <widget class="QPushButton" name="AddDirButton">
+                <property name="text">
+                 <string>Add directories...</string>
+                </property>
+               </widget>
               </item>
              </layout>
             </item>
