now translations get "built-in"
git-svn-id: http://video4fuze.googlecode.com/svn/trunk@80 8f0b585c-89e2-11de-a519-b78fc8232508

--- a/video4fuze.qrc
+++ b/video4fuze.qrc
@@ -6,4 +6,10 @@
     <file>icons/blue.png</file>
     <file>icons/red.png</file>
   </qresource>
+  <qresource prefix="translations">
+    <file>translations/v4f_ca.qm</file>
+    <file>translations/v4f_de.qm</file>
+    <file>translations/v4f_en.qm</file>
+    <file>translations/v4f_es.qm</file>
+  </qresource>
 </RCC>
